--- a/apps/bridge/package.json
+++ b/apps/bridge/package.json
@@ -9,15 +9,18 @@
     "dev": "node --watch src/index.js"
   },
   "dependencies": {
+    "@hapi/boom": "^10.0.1",
     "@whiskeysockets/baileys": "^6.6.0",
+    "axios": "^1.6.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.21.2",
     "pino": "^8.16.2",
     "pino-pretty": "^11.0.0",
-    "dotenv": "^16.3.1",
-    "axios": "^1.6.2",
-    "@hapi/boom": "^10.0.1"
+    "qrcode": "^1.5.4",
+    "qrcode-terminal": "^0.12.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0"
   }
 }
-
