--- a/infra/docker/docker-compose.yml
+++ b/infra/docker/docker-compose.yml
@@ -30,10 +30,13 @@ services:
       dockerfile: Dockerfile
     container_name: minimee-backend
     ports:
-      - "8000:8000"
+      - "8001:8000"
     environment:
       - DATABASE_URL=postgresql://minimee:minimee@postgres:5432/minimee
       - PYTHONUNBUFFERED=1
+      - GMAIL_CLIENT_ID=${GMAIL_CLIENT_ID:-}
+      - GMAIL_CLIENT_SECRET=${GMAIL_CLIENT_SECRET:-}
+      - GMAIL_REDIRECT_URI=${GMAIL_REDIRECT_URI:-http://localhost:3002/auth/gmail/callback}
     volumes:
       - ../../apps/backend:/app
     depends_on:
@@ -49,9 +52,9 @@ services:
       dockerfile: Dockerfile
     container_name: minimee-dashboard
     ports:
-      - "3000:3000"
+      - "3002:3000"
     environment:
-      - NEXT_PUBLIC_API_URL=http://backend:8000
+      - NEXT_PUBLIC_API_URL=http://localhost:8001
     volumes:
       - ../../apps/dashboard:/app
       - /app/node_modules
@@ -67,10 +70,13 @@ services:
       context: ../../apps/bridge
       dockerfile: Dockerfile
     container_name: minimee-bridge
+    ports:
+      - "3003:3003"
     environment:
       - BACKEND_API_URL=http://backend:8000
       - USER_ID=1
       - LOG_LEVEL=info
+      - BRIDGE_PORT=3003
     volumes:
       - ../../apps/bridge:/app
       - bridge_auth:/app/auth_info
