Fix: Configuration BRIDGE_API_URL pour Docker
- Ajouter BRIDGE_API_URL=http://bridge:3003 dans docker-compose.yml
- Le backend dans Docker doit utiliser le nom du service 'bridge' au lieu de 'localhost'
- Résout l'erreur 'All connection attempts failed' lors de l'envoi des notifications d'approbation

--- a/infra/docker/docker-compose.yml
+++ b/infra/docker/docker-compose.yml
@@ -34,6 +34,7 @@ services:
     environment:
       - DATABASE_URL=postgresql://minimee:minimee@postgres:5432/minimee
       - PYTHONUNBUFFERED=1
+      - BRIDGE_API_URL=http://bridge:3003
       - GMAIL_CLIENT_ID=${GMAIL_CLIENT_ID:-}
       - GMAIL_CLIENT_SECRET=${GMAIL_CLIENT_SECRET:-}
       - GMAIL_REDIRECT_URI=${GMAIL_REDIRECT_URI:-http://localhost:3002/auth/gmail/callback}
