feat: Migrer RAG vers LlamaIndex avec reranking cross-encoder
- Ajout service rag_llamaindex.py avec reranking automatique
- Configuration reranking dans config.py (rag_rerank_enabled, rag_rerank_top_k, rag_rerank_model)
- Archivage de rag.py vers rag_legacy.py
- Mise à jour imports dans minimee_router, approval_flow, email_draft
- Ajout tests unitaires pour nouveau service
- Ajout dépendances LlamaIndex dans requirements.txt

Le reranking améliore la qualité de récupération en réévaluant la pertinence avec un cross-encoder (top 20 → rerank → top 10)

--- a/apps/backend/requirements.txt
+++ b/apps/backend/requirements.txt
@@ -19,4 +19,8 @@ python-multipart==0.0.6
 pytest==7.4.3
 pytest-asyncio==0.21.1
 langdetect==1.0.9
+llama-index>=0.10.0
+llama-index-vector-stores-postgres>=0.1.0
+llama-index-embeddings-huggingface>=0.1.0
+llama-index-postprocessor-sentence-transformer-rerank>=0.1.0
 
