feat: améliorations Gmail, embeddings et interface utilisateur
- Backend: améliorations routers (embeddings, gmail, ingestion) et services (gmail_indexing, gmail_service, summarizer)
- Dashboard: nouveaux composants DataSourceStats et ImportHistory
- Améliorations UI: settings, tabs, ingestion progress
- Mise à jour package.json dashboard

--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo -p 3002",
+    "dev": "next dev --turbo",
     "build": "next build",
-    "start": "next start -p 3002",
+    "start": "next start",
     "lint": "eslint .",
     "type-check": "tsc --noEmit",
     "test": "echo \"No tests configured yet\" && exit 0"
